src/objects/Digital_Complaint_Items__c.object
<CustomObject>
    <fields>
        <fullName>Account_Lookup_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Lookup_Field</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Digital Complaint Items</relationshipLabel>
        <relationshipName>Digital_Complaint_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>This is the Account Name of the related Case.</description>
        <formula>Case_No__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asia1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPH Online User Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account_Lookup_Field__c</field>
                <operation>equals</operation>
                <valueField>Asia1__c.Contact__r.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asia1__c</referenceTo>
        <relationshipLabel>Digital Complaint Items</relationshipLabel>
        <relationshipName>Digital_Complaint_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_No__c</fullName>
        <label>Case No</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Digital Complaint Items</relationshipLabel>
        <relationshipName>Digital_Complaint_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Create_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_user__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Deactivate user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device_Code__c</fullName>
        <label>Device Code</label>
        <picklist>
            <picklistValues>
                <fullName>Any Type</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Logout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Logout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Application__c</fullName>
        <label>Mobile Application</label>
        <picklist>
            <picklistValues>
                <fullName>Zaobao Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Password__c</fullName>
        <label>New Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPH_Online_User_Id__c</fullName>
        <label>SPH Online User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done via External site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <formula>TEXT( Case_No__r.Sub_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <formula>Case_No__r.Subscription_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppress_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Suppress Email</label>
        <type>Checkbox</type>
    </fields>
    <label>Digital Complaint Items</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Digital Complaint Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Complaint Items</pluralLabel>
    <recordTypes>
        <fullName>Create_User</fullName>
        <active>true</active>
        <label>Create User</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deactivate_User</fullName>
        <active>true</active>
        <label>Deactivate User</label>
    </recordTypes>
    <recordTypes>
        <fullName>Force_Logout</fullName>
        <active>true</active>
        <label>Force Logout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reset_Password</fullName>
        <active>true</active>
        <label>Reset Password</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CannotForceLogOutSTandBT</fullName>
        <active>true</active>
        <description>Cannot Force Logout for ST and BT</description>
        <errorConditionFormula>(Force_Logout__c = TRUE &amp;&amp;   Subscription__c = &apos;ST&apos;) || (Force_Logout__c = TRUE &amp;&amp;  Subscription__c  = &apos;BT&apos;)</errorConditionFormula>
        <errorMessage>Force Logout for ST and BT has to be done via an external site.</errorMessage>
    </validationRules>
</CustomObject>